infra/kuber/affiliate-network-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: affiliate-network
spec:
  selector:
    app: affiliate-network
  type: LoadBalancer
  ports:
    - name: graphql
      protocol: TCP
      port: 3000
      targetPort: 3000
    - name: grpc
      protocol: TCP
      port: 3001
      targetPort: 3001

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: affiliate-network
  labels:
    app: affiliate-network
spec:
  replicas: 1
  selector:
    matchLabels:
      app: affiliate-network
  template:
    metadata:
      labels:
        app: affiliate-network
      annotations:
        linkerd.io/inject: enabled
    spec:
      containers:
        - name: affiliate-network
          image: tds/base
          imagePullPolicy: IfNotPresent
          command: ['node', './dist/services/affiliate-network/src/main.js']
