infra/kuber/api-gateway-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
spec:
  selector:
    app: api-gateway
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 4000
      targetPort: 3000

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
  labels:
    app: api-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
      annotations:
        linkerd.io/inject: enabled
    spec:
      containers:
        - name: api-gateway
          image: tds/base
          imagePullPolicy: IfNotPresent
          command: ['node', './dist/services/api-gateway/src/main.js']
