infra/kuber/postgres-statefullset.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
spec:
  selector:
    app: postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432

---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
spec:
  serviceName: postgres
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
      annotations:
        linkerd.io/inject: enabled
    spec:
      containers:
        - name: postgres
          image: postgres
          volumeMounts:
            - name: postgres
              mountPath: /var/lib/postgresql/data
#          ports:
#            - containerPort: 5432
  volumeClaimTemplates:
    - metadata:
        name: postgres
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 1Gi
